package protoFile.ContinueMessage_905;
message OtherMessage{
     required string msg = 1;
}